--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Piedra papel tijera</title>
+        <script src="script.js" defer></script>
     </head>
     <body>
-        <script src="script.js"></script>
+        <button id="RockButton">Rock</button>
+        <button id="ScissorsButton">Scissors</button>
+        <button id="PaperButton">Paper</button>
+        <div>
+            <p id="playerCounter">Player: 0</p>
+            <p id="computerCounter">Computer: 0</p>
+        </div>
     </body>
 </html>
